@@ -11,7 +11,7 @@ Uploaders: Josip Rodin <joy-packages@debian.org>,
  Raphael Geissert <geissert@debian.org>
 Build-Depends: debhelper (>= 5)
 Build-Depends-Indep: debiandoc-sgml, sed (>= 4.1-4)
-Standards-Version: 3.9.0
+Standards-Version: 3.9.1
 Vcs-Git: git://git.debian.org/git/lintian/lintian.git
 Vcs-Browser: http://git.debian.org/?p=lintian/lintian.git
 
@@ -40,4 +40,4 @@ Description: Debian package checker
  should check packages with this tool before uploading them to the
  archive.
  .
- This version of Lintian is calibrated for policy version 3.9.0.
+ This version of Lintian is calibrated for policy version 3.9.1.
