@@ -5,4 +5,4 @@ control-field-traversal-2 (1) unstable; urgency=low
 
   * Suppress "should close ITP bug" messages.  (Closes: #123456)
 
- -- Debian Lintian Maintainers <lintian-maint@debian.org>  Wed, 30 Jun 2010 01:01:01 -0001
+ -- Debian Lintian Maintainers <lintian-maint@debian.org>  Sun, 25 Jul 2010 20:02:21 -0700
