@@ -61,6 +61,11 @@ lintian (2.4.3) UNRELEASED; urgency=low
 
   * debian/changelog:
     + [RA] Fix Policy 3.9.0 reference in 2.4.2.  (Closes: #587549)
+  * debian/control:
+    + [RA] Update standards version to 3.9.1.
+
+  * data/standards-version/release-dates:
+    + [RA] Add release date for Policy 3.9.1.
 
   * lib/Lintian/Check.pm:
     + [RA] More correctly handle hyphenated words to avoid triggering
